up to gothic it's readable

--- a/fenna-files/packages.sty
+++ b/fenna-files/packages.sty
@@ -40,6 +40,7 @@ boom/.style={for tree={s sep=10mm, inner sep=0, l=0}}
 
 %%%%REFERENCES%%%
 \usepackage[backend=biber,style=authoryear-comp,natbib=true,dashed=false,sorting=ynt]{biblatex}
+%when initials show up: uniquename=false in above line
 % \usepackage{natbib}
 % \bibliographystyle{linquiry2}
 \newcommand{\posscitet}[1]{\citeauthor{#1}'s (\citeyear{#1})}
