--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -96,7 +96,7 @@
   location = {Oxford},
   title = {Complex Left Branches, Spellout, and Prefixes},
   booktitle = {Exploring Nanosyntax},
-  publisher = {{Oxford University Press}},
+  publisher = {Oxford University Press},
   author = {Starke, Michal},
   editor = {Baunaz, Lena and De Clercq, Karen and Haegeman, Liliane and Lander, Eric},
   year = {2018},
@@ -481,7 +481,7 @@
 
 @incollection{harbert1992,
   title={Gothic relative clauses and syntactic theory},
-  author={Harbert, Wayne},
+  author={Harbert, Wayne Eugene},
   book={On Germanic linguistics: Issues and methods},
   pages={109--146},
   year={1992},
@@ -564,7 +564,7 @@
 
 @article{harbert1983,
   title={A note on Old English free relatives},
-  author={Harbert, Wayne},
+  author={Harbert, Wayne Eugene},
   journal={Linguistic inquiry},
   volume={14},
   number={3},
