--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -2,28 +2,28 @@
 
 \chapter{Two attested patterns}
 
-In Part \ref{part:case-facts} of this dissertation, I discussed a first aspect of case competition in headless relatives. When there is case competition, reference is always made to the same case scale: there is a fixed order that determines which case wins. The same case scale is used crosslinguistically.
+In Part \ref{part:case-facts} of this dissertation, I discussed a first aspect of case competition in headless relatives. When there is case competition, reference is always made to the same case scale: there is a fixed order that determines which case wins. This is the same case scale crosslinguistically. I repeat the case scale from Part \ref{part:case-facts} in \ref{ex:case-scale-two-patterns}.
 
 \ex. \ac{nom} < \ac{acc} < \ac{dat}\label{ex:case-scale-two-patterns}
 
-I showed that we can account for different facts having to do with the case hierarchy if we analyze the case hierarchy in terms of decomposed features. In line with that, I refer to cases more to the right on the case as more complex case than the cases more to the left on the case. They are less complex.
+Also in Part \ref{part:case-facts}, that a cumulative case decomposition can derive the case scale, not only in case competition in headless relatives, but also in syncretism patterns, morphological case containment. In other words, an accusative contains all features a nominative contains plus one more. Similarly, a dative contains all features an accusative contains plus one. Therefore, a dative can be considered more complex than an accusative, and a accusative more than a nominative. In line with that, I refer to cases more to the right on the case as more complex cases than cases more to the left on the scale.
 
-However, there is a second aspect to headless relatives, which differs across languages. This has to do with whether case competition takes place in the first place. Languages differ in whether they allow the internal case or the external case to win the case competition. Logically speaking, there are three patterns possible for languages that show case competition.\footnote{
-In this stage, I do not discuss languages that do not allow internal or external case to win the case competition, because they do not show case competition. In Section X I come back to this kind of language.
+This part, Part \ref{part:variation}, of the dissertation focuses on a second aspect to headless relatives. This part is not stable crosslinguistically, but it differs across languages. Languages differ in whether they allow the internal case or the external case to surface when they win the case competition. Logically speaking, there are three patterns possible for languages that show case competition.\footnote{
+Theoretically, there a is fourth possibility: a language that has case competition in its headless relatives, but it lets neither the internal nor the external case surface when it wins. On the surface this language cannot be distinguished from a language that does not have case competition to begin with. In this section I do not discuss this type of language. I come back to it in Chapter \ref{ch:relativization}.
 }
 
-The first possibility is that a language allows both the internal and the external case to win the competition. In this type of language, any two cases can be the internal and external case, and the more complex case surfaces.
-The second possibility is that a language allows the internal case to win the case competition, but it does not allow the external case to. In this type of language, only the internal case gets to surface if it is complex. If the external case is more complex, it does not surface. In fact, there is no grammatical result possible.
-The third possibility is that a language allows the external case to win the case competition, but it does not allow the internal case to. In this type of language, only the external case gets to surface if it is complex. If the internal case is complex, it does not surface, and no grammatical result is possible.
+The first possible pattern is that a language allows for the internal or the external case to surface when it wins the competition. In this type of language, any case can be the internal and external case, and the more complex case of the two surfaces.
+The second possible pattern is that a language allows the internal case to surface when it wins the case competition, but it does not allow the external case to. In this type of language, only the internal case gets to surface if it is more complex than the external one. If the external case is more complex, it does not surface, and it is not possible to form a grammatical headless relative construction.
+The third possible pattern is that a language allows the external case to surface when it wins the case competition, but it does not allow the internal case to. In this type of language, only the external case gets to surface if it is more complex. If the internal case is more complex, it does not surface, and it is not possible to form a grammatical headless relative construction.
 
-In this chapter I show that two of these three patterns are attested crosslinguistically. The first pattern, in which both internal and external case can win, is the one already exemplified by Gothic. I show that there is another language that shows the same pattern: Old High German. The second pattern, in which only the internal case wins, is exemplified by Modern German. There is no language in which only the external case wins the case competition. A summary of the patterns is given in Table \ref{tbl:competition-summary}.
+In this chapter I show that two of these three patterns are attested crosslinguistically. The first pattern, in which the internal or external case can surface, is the one already exemplified by Gothic. I show that there is another language that shows the same pattern: Old High German. The second pattern, in which only the internal case can surface, is exemplified by Modern German. There is no language in which only the external case can surface when it wins the case competition. A summary of the pattens is given in Table \ref{tbl:competition-summary}.
 
 \begin{table}[H]
  \center
  \caption {Variation}
   \begin{tabular}{ccc}
   \toprule
-                    & \ac{int}>\ac{ext}  & \ac{ext}>\ac{int} \\
+                    & \tsc{int}>\tsc{ext}  & \tsc{ext}>\tsc{int} \\
                     \cmidrule{2-3}
   Gothic, \ac{ohg}  & ✔                  & ✔                 \\
   \ac{mg}           & ✔                  & *                 \\
@@ -35,9 +35,12 @@ In this chapter I show that two of these three patterns are attested crosslingui
 
 \section{Internal or external wins}
 
-The first type of language that is attested is the one that allows both the internal case and the external case to win the case competition. In this section I give a summary of the findings in Gothic \citep{harbert1978}, repeated from Chapter \ref{ch:recurring}. I also discuss data from Old High German, which is the result of my own research.
+The first type of language that is attested is the one that allows the internal case or the external case to surface when it wins the case competition. In this section I give a summary of the findings in Gothic \citep{harbert1978}, repeated from Chapter \ref{ch:recurring}. I also discuss data from Old High German, which is the result of my own research.
 
-As discussed in Chapter \ref{ch:recurring}, Gothic is a language in case competition in headless relatives adheres to the case scale in \ref{ex:case-scale-two-patterns}. In Gothic it does not matter whether the more complex case is the internal case or the external case.
+As discussed in Chapter \ref{ch:recurring}, Gothic is a language that shows case competition. The relative pronoun surfaces in the more complex case, following the case scale. That is, accusative wins over nominative, dative wins over nominative, and dative wins over accusative.
+Gothic allows the internal case or the external case to surface when it wins the case competition. This is summarized in \ref{tbl:summary-gothic-repeated}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun.
+The three cells in the lower left corner are the situations in which the internal case surfaces when it wins the competition. The three cells in the upper right corner are the situations in which the external case surfaces when it wins the competition.
+The examples corresponding to the cells in the table can be found in Section \ref{sec:pattern-rels}.
 
 \begin{table}[H]
   \center
@@ -46,18 +49,11 @@ As discussed in Chapter \ref{ch:recurring}, Gothic is a language in case competi
     \label{tbl:summary-gothic-repeated}
 \end{table}
 
-% Old High German is widely discussed in the literature because of its case attraction (references).
-%
-% \ex. example case attraction
-%
-% by extension, examples with external case surfacing in headless relatives are also discussed
-% to the best of my knowledge, there is no systematic study of direction: int to ext or ext to int
-
-% The description of Gothic is mostly based on \citep{harbert1978}. The spelling of the examples follows the Wulfila Project website.\footnote{
-% <http://www.wulfila.be>
-% } The glossing comes from the detailed tagging on that same website. The translations are my own.
-
-A language that shows the same pattern as Gothic is Old High German. The relative pronoun can surface in the internal or the external case, depending on which case is more complex. This conclusion follows from my own research of the texts Der althochdeutsche Isidor, The Monsee fragments, Otfrid's Evangelienbuch and Tatian in ANNIS \citep{krause2016}. The examples below follow the spelling and the detailed glosses in ANNIS. The translations are my own.
+A language that shows the same pattern as Gothic is Old High German. The relative pronoun can surface in the internal or the external case, depending on which case is more complex. This conclusion follows from my own research of the texts Der althochdeutsche Isidor, The Monsee fragments, Otfrid's Evangelienbuch and Tatian in ANNIS \citep{krause2016}.\footnote{
+Old High German is widely discussed in the literature because of its case attraction in headed relatives \citep[cf.][]{pittner1995}, a phenomenon that seems related to case competition in headless relatives. A common conclusion is that case attraction in headed relatives in Old High German adheres to the case scale. The same is claimed for headless relatives.
+What, to the best of my knowledge, has not been systematically studied is whether Old High German headless relative allow the internal or the external case to surface when it wins the case competition. This is what I investigated in my work.
+}
+The examples follow the spelling and the detailed glosses in ANNIS. The translations are my own.
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative.
 
@@ -73,23 +69,13 @@ The relative pronoun \tit{dhen} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in th
 `I give rise to from Samuel of Jakob and from Judas him who possesses my mountains.' \flushfill{\ac{ohg}, \ac{isid} 34:3}\label{ex:ohg-acc-nom}\\
 % Lat `Educam de Iacob semine et de Iuda possedentem montes meos.'
 
-There is a counterexample.
-Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale: the nominative.
-The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
-The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
-The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-\exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
- that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear\scsub{[acc]} should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\scsub{[nom]}\\
- `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid} I 3:38}\label{ex:ohg-counterexample}
-
-%this is the only counterexample I have found. it could be there because of jezus.
-
 Consider the example in \ref{ex:ohg-nom-acc}. In this example, the internal case is accusative and the external case is nominative.
 The internal case is accusative. The predicates \tit{zellen} `to tell' and \tit{slahan} `to kill' takes accusative objects.
 The external case is nominative. The predicate \tit{sin} `to be' takes nominative objects.
 The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
+
+hi
 
 \exg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent} \tbf{joh} \tbf{then} \tbf{sie} \tbf{sláhan} \tbf{wollent}!\\
 this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
@@ -145,7 +131,22 @@ Examples in which the internal case is dative, the external case is accusative a
 and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
 `But he does not do that to him, the sad heart comes him, and he lives in God's rage!' \flushfill{\ac{ohg}, \ac{otfrid} II 3:37}\label{ex:ohg-acc-dat}
 
-To summarize
+In my research I found a single counterexample to the generalizations made.
+Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale: the nominative.
+The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
+The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
+The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
+ that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear\scsub{[acc]} should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\scsub{[nom]}\\
+ `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid} I 3:38}\label{ex:ohg-counterexample}
+
+%this is the only counterexample I have found. it could be there because of jezus.
+
+
+To summarize \footnote{
+I left the counterexample out of this overview.
+}
 
 \begin{table}[H]
   \center
