also ohg and modern german done

--- a/two-attested-patterns.tex
+++ b/two-attested-patterns.tex
@@ -35,10 +35,10 @@ In this chapter I show that two of these three patterns are attested crosslingui
 
 \section{Internal or external wins}
 
-The first type of language that is attested is the one that allows the internal case or the external case to surface when it wins the case competition. In this section I give a summary of the findings in Gothic \citep{harbert1978}, repeated from Chapter \ref{ch:recurring}. I also discuss data from Old High German, which is the result of my own research.
+The first type of language that is attested is the one that allows the internal case or the external case to surface when it wins the case competition. Two languages that show this pattern are Gothic and Old High German. In this section I first give a summary of the findings in Gothic \citep{harbert1978}, repeated from Chapter \ref{ch:recurring}. Second, I discuss data from Old High German, which is the result of my own research.
 
 As discussed in Chapter \ref{ch:recurring}, Gothic is a language that shows case competition. The relative pronoun surfaces in the more complex case, following the case scale. That is, accusative wins over nominative, dative wins over nominative, and dative wins over accusative.
-Gothic allows the internal case or the external case to surface when it wins the case competition. This is summarized in \ref{tbl:summary-gothic-repeated}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun.
+Gothic allows the internal case or the external case to surface when it wins the case competition. This is summarized in \ref{tbl:summary-gothic-repeated}. The left column shows the internal case between square brackets. The upper row shows the external case between square brackets. The other cells indicate the case of the relative pronoun. The diagonal is left blank, because these are instances in which the internal and external case match, and there is no case competition taking place.
 The three cells in the lower left corner are the situations in which the internal case surfaces when it wins the competition. The three cells in the upper right corner are the situations in which the external case surfaces when it wins the competition.
 The examples corresponding to the cells in the table can be found in Section \ref{sec:pattern-rels}.
 
@@ -74,8 +74,6 @@ The internal case is accusative. The predicates \tit{zellen} `to tell' and \tit{
 The external case is nominative. The predicate \tit{sin} `to be' takes nominative objects.
 The relative pronoun \tit{then} `\ac{rel}.\ac{acc}.\ac{m}.\ac{sg}' appears in the internal case: the accusative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
 Examples in which the internal case is accusative, the external case is nominative and the relative pronoun appears in nominative case are unattested.
-
-hi
 
 \exg. thíz ist \tbf{then} \tbf{sie} \tbf{zéllent} \tbf{joh} \tbf{then} \tbf{sie} \tbf{sláhan} \tbf{wollent}!\\
 this.\tsc{nom} be.3\tsc{sg}\scsub{[nom]} \tsc{rel}.\tsc{acc}.\tsc{m}.\tsc{sg} \tsc{3pl}.\tsc{masc}.\tsc{nom} tell.\tsc{3pl}\scsub{[acc]}
@@ -131,22 +129,9 @@ Examples in which the internal case is dative, the external case is accusative a
 and live.3\tsc{sg} 3.\tsc{sg}.\tsc{m}.\tsc{acc} over god.\tsc{gen}.\tsc{sg} rage.\tsc{sg}\\
 `But he does not do that to him, the sad heart comes him, and he lives in God's rage!' \flushfill{\ac{ohg}, \ac{otfrid} II 3:37}\label{ex:ohg-acc-dat}
 
-In my research I found a single counterexample to the generalizations made.
-Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative. Surprisingly, the relative pronoun appears in the case lower on the case scale: the nominative.
-The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
-The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
-The relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
-
-\exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
- that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear\scsub{[acc]} should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\scsub{[nom]}\\
- `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid} I 3:38}\label{ex:ohg-counterexample}
-
-%this is the only counterexample I have found. it could be there because of jezus.
-
-
-To summarize \footnote{
-I left the counterexample out of this overview.
-}
+A summary of the data is given in \ref{tbl:summary-old-high-german}.
+The three cells in the lower left corner are the situations in which the internal case surfaces when it wins the competition. They correspond to the examples \ref{ex:ohg-acc-nom}, \ref{ex:ohg-dat-nom} and \ref{ex:ohg-dat-acc}.
+The three cells in the upper right corner are the situations in which the external case surfaces when it wins the competition. They correspond to the examples \ref{ex:ohg-nom-acc}, \ref{ex:ohg-nom-dat} and \ref{ex:ohg-acc-dat}.
 
 \begin{table}[H]
   \center
@@ -178,13 +163,32 @@ I left the counterexample out of this overview.
     \label{tbl:summary-old-high-german}
 \end{table}
 
-In sum, Gothic and Old High German both allow the internal or the external case to surface, as long as it is the most complex case.
+\clearpage
+
+In my research I encountered a single counterexample to the pattern I just described.
+Consider the example in \ref{ex:ohg-counterexample}. In this example, the internal case is nominative and the external case is accusative.
+The internal case is nominative. The predicate \tit{giheilen} `to save' takes nominative subjects.
+The external case is accusative. The predicate \tit{beran} `to bear' takes accusative objects.
+Surprisingly, the relative pronoun \tit{thér} `\ac{rel}.\ac{nom}.\ac{m}.\ac{sg}' appears in the internal case: the nominative, which is the less complex of the two cases. The relative pronoun is marked in bold, just like as the relative clause, showing that the relative pronoun patterns with the relative clause.
+
+\exg. tház si uns béran scolti \tbf{thér} \tbf{unsih} \tbf{gihéilti}\\
+ that 3\tsc{sg.f.nom} 1\tsc{pl.dat} bear\scsub{[acc]} should.\tsc{subj}.\tsc{past}.\tsc{3sg} \tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg} 1\tsc{pl.acc} save.\tsc{subj.past}.\tsc{3sg}\scsub{[nom]}\\
+ `that she should bear for us him who will save us' \flushfill{\ac{ohg}, \ac{otfrid} I 3:38}\label{ex:ohg-counterexample}
+
+This example is unexpected, because the less complex case (the nominative) wins and not the more complex case (the accusative).
+The only explanation for this I can see is a functional one: the \tit{thér} `\tsc{rel}.\tsc{nom}.\tsc{m}.\tsc{sg}' in \ref{ex:ohg-counterexample} refers to Jesus. In the relative clause he is the subject of \tit{unsih gihéilti} `will save us', hence the internal nominative case. In the main clause he is the object of \tit{tház si uns béran scolti} `that she should bear', hence the external accusative case.
+Letting the relative pronoun surface in the internal case could be interpreted as emphasizing the role of Jesus as a savior, rather than him being the object of being given birth to. In line with that reasoning, it is expected that certain grammatical facts more often deviate from regular patterns if Jesus is involved. I leave investigating this prediction for further research.
+Of course, this does not answer the question of what happens to the accusative case required by the external predicate. It also does not explain why not another emphasizing strategy is used, for instance forming a light-headed relative, which would leave space for two cases.
+I acknowledge this example as a counterexample to the pattern I describe, but I do not change my generalization, as this is a single occurrence.
+
+Leaving the counterexample aside, I conclude that Gothic and Old High German are both instances languages that allow the internal or the external case to surface in case competition. The deciding factor for which case surfaces is the complexity of the case: the most complex case wins and surfaces.
+
 
 \section{Only internal case wins}
 
-Modern German differs from Gothic and Old High German. Just like the two other languages, Modern German adheres to the case scale: the more complex case wins the case competition. However, Modern German only allows the winner of the case competition to surface when it is the internal case. When the external case wins the competition, the result is ungrammatical.
+The second type of language that is attested is the one that only allows the internal case to surface when it wins the case competition. An example of a language that shows this pattern is Modern German. In this section I discuss the Modern German data, based on the research of \cite{vogel2001}.
 
-The description of Modern German is mostly based on \citep{vogel2001}.
+Modern German behave just like Gothic and Old High German in that it adheres to the case scale: the more complex case wins the case competition. Modern German differs from the two other languages in that it only allows the winner of the case competition to surface when it is the internal case. When the external case wins the competition, the result is ungrammatical.
 
 I start with the competition between accusative and nominative. Following the case scale, the relative pronoun appears in accusative case and never in nominative. Following the internal-only requirement, only if the accusative case is the internal case, the sentence is grammatical.
 
@@ -285,8 +289,9 @@ Changing the case of the relative pronoun to the accusative gives an ungrammatic
 I.\ac{nom} invite.1\tsc{sg}\scsub{[acc]} \tsc{rel}.\ac{acc}.\tsc{an} also Maria.\ac{nom} trust.3\tsc{sg}\scsub{[dat]}.\\
 `I invite whoever Maria also trusts.' \flushfill{\ac{mg}, adapted from \pgcitealt{vogel2001}{344}}\label{ex:mg-acc-dat-u}
 
-
-To summarize
+A summary of the data is given in \ref{tbl:summary-modern-german}.
+The three cells in the lower left corner are the situations in which the internal case surfaces when it wins the competition. They correspond to the examples \ref{ex:mg-acc-nom}, \ref{ex:mg-dat-nom} and \ref{ex:mg-dat-acc}.
+The three cells in the upper right corner are the situations in which the external case surfaces when it wins the competition. As Modern German does not allow the winner of the case competition to surface when it appears in the external case, these instances are ungrammatical. They correspond to the examples \ref{ex:mg-nom-acc}, \ref{ex:mg-nom-dat} and \ref{ex:mg-acc-dat}.
 
 \begin{table}[H]
   \center
@@ -300,13 +305,13 @@ To summarize
           \\ \cmidrule{1-4}
       [\ac{nom}]
           &
-          &
-          &
+          & *
+          & *
           \\ \cmidrule{1-4}
       [\ac{acc}]
-          & \ac{acc}/(\ac{nom})
+          & \ac{acc}
           &
-          &
+          & *
           \\ \cmidrule{1-4}
       [\ac{dat}]
           & \ac{dat}
@@ -315,15 +320,16 @@ To summarize
           \\
     \bottomrule
   \end{tabular}
+  \label{tbl:summary-modern-german}
 \end{table}
 
-In sum, Modern German has two requirements for case competition in its headless relatives. First, the relative pronoun surfaces in the more complex case, following the case scale. Second, the case competition can only be won by the internal case, not the external case.
+In sum, Modern German has two requirements for case competition in its headless relatives. First, the relative pronoun surfaces in the more complex case, following the case scale. Second, the case competition can only be won by the internal case, and not by the external case.
 
 \section{No only external case wins}
 
-Logically, a third possibility exists. However, so the best of my knowledge, this pattern is not attested in any (former) natural language.
+Logically, a third option exist: a language that only allows the external case to surface when it wins the case competition. To the best of my knowledge, this pattern is not attested in any (former) natural language. In this section I discuss languages that have claimed to have this pattern in the literature. I give examples that show that this is not the case. I also discuss languages in which the relative pronoun appear in the external case. However, they are also not languages of the `third type', as they do not show any case competition.
 
-It has been said about Old Greek (cf. in \citealt{cinque2005}, who stated the same about Gothic) (see a lot of examples here \citealt{kakarikos2014}), but here is an example of why that's not the case:. Although they seem to be more rare, there are also example in which the internal case surfaces.
+It has been claimed that Old Greek (cf. in \citealt{cinque2005}, who stated the same about Gothic) (see a lot of examples here \citealt{kakarikos2014}), but here is an example of why that's not the case:. Although they seem to be more rare, there are also example in which the internal case surfaces.
 
 Consider..
 \tit{philéō} `to love' takes accusative, \tit{apothnḗiskō} `to die'
